--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "dependencies": {
+    "koa": "^2.14.2",
+    "yargs": "^17.7.2"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "mocha": "^10.2.0"
+  }
 }
