--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "elm-format": "^0.8.7",
+    "elm-review": "^2.12.0",
+    "elm-test": "^0.19.1-revision12",
     "gulp": "^4.0.2",
-    "mocha": "^10.2.0"
+    "markdown-it": "^14.1.0",
+    "marked": "^14.1.2",
+    "mocha": "^10.2.0",
+    "pegjs": "^0.10.0"
   }
 }
