--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A reimplementation of TiddlyWiki using Elm and Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "elm-test"
   },
   "keywords": [],
   "author": "",
